[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
build = "build.rs"
name = "vl"
version = "0.1.0"

[dependencies]
cortex-m = "0.1.6"
r0 = "0.2.0"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[dependencies.cortex-m-semihosting]
optional = true
version = "0.1.1"

[dependencies.stm32f100-memory-map]
path = "../stm32f100-memory-map"

[dev-dependencies.ascii]
default-features = false
version = "0.8.0"

[features]
default = ["semihosting"]
semihosting = ["cortex-m-semihosting"]

[profile]

[profile.release]
lto = true
